// Vitest Snapshot v1

exports[`edits a single song 1`] = `
<form data-v-d70eb300="">
  <header data-v-d70eb300=""><span data-v-d70eb300="" class="cover" style="background-image: url(http://test/album.jpg);"></span>
    <div data-v-d70eb300="" class="meta">
      <h1 data-v-d70eb300="" class="">Rocket to Heaven</h1>
      <h2 data-v-d70eb300="" data-testid="displayed-artist-name" class="">Led Zeppelin</h2>
      <h2 data-v-d70eb300="" data-testid="displayed-album-name" class="">IV</h2>
    </div>
  </header>
  <main data-v-d70eb300="" class="tabs">
    <div data-v-d70eb300="" class="clear" role="tablist"><button data-v-d70eb300="" id="editSongTabDetails" aria-selected="true" aria-controls="editSongPanelDetails" role="tab" type="button"> Details </button><button data-v-d70eb300="" id="editSongTabLyrics" aria-selected="false" aria-controls="editSongPanelLyrics" data-testid="edit-song-lyrics-tab" role="tab" type="button"> Lyrics </button></div>
    <div data-v-d70eb300="" class="panes">
      <div data-v-d70eb300="" id="editSongPanelDetails" aria-labelledby="editSongTabDetails" role="tabpanel" tabindex="0">
        <div data-v-d70eb300="" class="form-row"><label data-v-d70eb300=""> Title <input data-v-d70eb300="" data-testid="title-input" name="title" title="Title" type="text"></label></div>
        <div data-v-d70eb300="" class="form-row cols"><label data-v-d70eb300=""> Artist <input data-v-d70eb300="" placeholder="" data-testid="artist-input" name="artist" type="text"></label><label data-v-d70eb300=""> Album Artist <input data-v-d70eb300="" placeholder="" data-testid="albumArtist-input" name="album_artist" type="text"></label></div>
        <div data-v-d70eb300="" class="form-row"><label data-v-d70eb300=""> Album <input data-v-d70eb300="" placeholder="" data-testid="album-input" name="album" type="text"></label></div>
        <div data-v-d70eb300="" class="form-row cols"><label data-v-d70eb300=""> Track <input data-v-d70eb300="" placeholder="" data-testid="track-input" min="1" name="track" type="number"></label><label data-v-d70eb300=""> Disc <input data-v-d70eb300="" placeholder="" data-testid="disc-input" min="1" name="disc" type="number"></label></div>
        <div data-v-d70eb300="" class="form-row cols"><label data-v-d70eb300=""> Genre <input data-v-d70eb300="" placeholder="" data-testid="genre-input" name="genre" type="text" list="genres"><datalist data-v-d70eb300="" id="genres">
              <option data-v-d70eb300="" value="Blues"></option>
              <option data-v-d70eb300="" value="Classic Rock"></option>
              <option data-v-d70eb300="" value="Country"></option>
              <option data-v-d70eb300="" value="Dance"></option>
              <option data-v-d70eb300="" value="Disco"></option>
              <option data-v-d70eb300="" value="Funk"></option>
              <option data-v-d70eb300="" value="Grunge"></option>
              <option data-v-d70eb300="" value="Hip-Hop"></option>
              <option data-v-d70eb300="" value="Jazz"></option>
              <option data-v-d70eb300="" value="Metal"></option>
              <option data-v-d70eb300="" value="New Age"></option>
              <option data-v-d70eb300="" value="Oldies"></option>
              <option data-v-d70eb300="" value="Other"></option>
              <option data-v-d70eb300="" value="Pop"></option>
              <option data-v-d70eb300="" value="R&amp;B"></option>
              <option data-v-d70eb300="" value="Rap"></option>
              <option data-v-d70eb300="" value="Reggae"></option>
              <option data-v-d70eb300="" value="Rock"></option>
              <option data-v-d70eb300="" value="Techno"></option>
              <option data-v-d70eb300="" value="Industrial"></option>
              <option data-v-d70eb300="" value="Alternative"></option>
              <option data-v-d70eb300="" value="Ska"></option>
              <option data-v-d70eb300="" value="Death Metal"></option>
              <option data-v-d70eb300="" value="Pranks"></option>
              <option data-v-d70eb300="" value="Soundtrack"></option>
              <option data-v-d70eb300="" value="Euro-Techno"></option>
              <option data-v-d70eb300="" value="Ambient"></option>
              <option data-v-d70eb300="" value="Trip-Hop"></option>
              <option data-v-d70eb300="" value="Vocal"></option>
              <option data-v-d70eb300="" value="Jazz &amp; Funk"></option>
              <option data-v-d70eb300="" value="Fusion"></option>
              <option data-v-d70eb300="" value="Trance"></option>
              <option data-v-d70eb300="" value="Classical"></option>
              <option data-v-d70eb300="" value="Instrumental"></option>
              <option data-v-d70eb300="" value="Acid"></option>
              <option data-v-d70eb300="" value="House"></option>
              <option data-v-d70eb300="" value="Game"></option>
              <option data-v-d70eb300="" value="Sound Clip"></option>
              <option data-v-d70eb300="" value="Gospel"></option>
              <option data-v-d70eb300="" value="Noise"></option>
              <option data-v-d70eb300="" value="Alternative Rock"></option>
              <option data-v-d70eb300="" value="Bass"></option>
              <option data-v-d70eb300="" value="Punk"></option>
              <option data-v-d70eb300="" value="Space"></option>
              <option data-v-d70eb300="" value="Meditative"></option>
              <option data-v-d70eb300="" value="Instrumental Pop"></option>
              <option data-v-d70eb300="" value="Instrumental Rock"></option>
              <option data-v-d70eb300="" value="Ethnic"></option>
              <option data-v-d70eb300="" value="Gothic"></option>
              <option data-v-d70eb300="" value="Darkwave"></option>
              <option data-v-d70eb300="" value="Techno-Industrial"></option>
              <option data-v-d70eb300="" value="Electronic"></option>
              <option data-v-d70eb300="" value="Pop-Folk"></option>
              <option data-v-d70eb300="" value="Eurodance"></option>
              <option data-v-d70eb300="" value="Dream"></option>
              <option data-v-d70eb300="" value="Southern Rock"></option>
              <option data-v-d70eb300="" value="Comedy"></option>
              <option data-v-d70eb300="" value="Cult"></option>
              <option data-v-d70eb300="" value="Gangsta"></option>
              <option data-v-d70eb300="" value="Top 40"></option>
              <option data-v-d70eb300="" value="Christian Rap"></option>
              <option data-v-d70eb300="" value="Pop/Funk"></option>
              <option data-v-d70eb300="" value="Jungle"></option>
              <option data-v-d70eb300="" value="Native US"></option>
              <option data-v-d70eb300="" value="Cabaret"></option>
              <option data-v-d70eb300="" value="New Wave"></option>
              <option data-v-d70eb300="" value="Psychedelic"></option>
              <option data-v-d70eb300="" value="Rave"></option>
              <option data-v-d70eb300="" value="Showtunes"></option>
              <option data-v-d70eb300="" value="Trailer"></option>
              <option data-v-d70eb300="" value="Lo-Fi"></option>
              <option data-v-d70eb300="" value="Tribal"></option>
              <option data-v-d70eb300="" value="Acid Punk"></option>
              <option data-v-d70eb300="" value="Acid Jazz"></option>
              <option data-v-d70eb300="" value="Polka"></option>
              <option data-v-d70eb300="" value="Retro"></option>
              <option data-v-d70eb300="" value="Musical"></option>
              <option data-v-d70eb300="" value="Rock &amp; Roll"></option>
              <option data-v-d70eb300="" value="Hard Rock"></option>
              <option data-v-d70eb300="" value="Folk"></option>
              <option data-v-d70eb300="" value="Folk-Rock"></option>
              <option data-v-d70eb300="" value="National Folk"></option>
              <option data-v-d70eb300="" value="Swing"></option>
              <option data-v-d70eb300="" value="Fast Fusion"></option>
              <option data-v-d70eb300="" value="Bebob"></option>
              <option data-v-d70eb300="" value="Latin"></option>
              <option data-v-d70eb300="" value="Revival"></option>
              <option data-v-d70eb300="" value="Celtic"></option>
              <option data-v-d70eb300="" value="Bluegrass"></option>
              <option data-v-d70eb300="" value="Avantgarde"></option>
              <option data-v-d70eb300="" value="Gothic Rock"></option>
              <option data-v-d70eb300="" value="Progressive Rock"></option>
              <option data-v-d70eb300="" value="Psychedelic Rock"></option>
              <option data-v-d70eb300="" value="Symphonic Rock"></option>
              <option data-v-d70eb300="" value="Slow Rock"></option>
              <option data-v-d70eb300="" value="Big Band"></option>
              <option data-v-d70eb300="" value="Chorus"></option>
              <option data-v-d70eb300="" value="Easy Listening"></option>
              <option data-v-d70eb300="" value="Acoustic"></option>
              <option data-v-d70eb300="" value="Humour"></option>
              <option data-v-d70eb300="" value="Speech"></option>
              <option data-v-d70eb300="" value="Chanson"></option>
              <option data-v-d70eb300="" value="Opera"></option>
              <option data-v-d70eb300="" value="Chamber Music"></option>
              <option data-v-d70eb300="" value="Sonata"></option>
              <option data-v-d70eb300="" value="Symphony"></option>
              <option data-v-d70eb300="" value="Booty Bass"></option>
              <option data-v-d70eb300="" value="Primus"></option>
              <option data-v-d70eb300="" value="Porn Groove"></option>
              <option data-v-d70eb300="" value="Satire"></option>
              <option data-v-d70eb300="" value="Slow Jam"></option>
              <option data-v-d70eb300="" value="Club"></option>
              <option data-v-d70eb300="" value="Tango"></option>
              <option data-v-d70eb300="" value="Samba"></option>
              <option data-v-d70eb300="" value="Folklore"></option>
              <option data-v-d70eb300="" value="Ballad"></option>
              <option data-v-d70eb300="" value="Power Ballad"></option>
              <option data-v-d70eb300="" value="Rhythmic Soul"></option>
              <option data-v-d70eb300="" value="Freestyle"></option>
              <option data-v-d70eb300="" value="Duet"></option>
              <option data-v-d70eb300="" value="Punk Rock"></option>
              <option data-v-d70eb300="" value="Drum Solo"></option>
              <option data-v-d70eb300="" value="A cappella"></option>
              <option data-v-d70eb300="" value="Euro-House"></option>
              <option data-v-d70eb300="" value="Dance Hall"></option>
              <option data-v-d70eb300="" value="Goa"></option>
              <option data-v-d70eb300="" value="Drum &amp; Bass"></option>
              <option data-v-d70eb300="" value="Club-House"></option>
              <option data-v-d70eb300="" value="Hardcore Techno"></option>
              <option data-v-d70eb300="" value="Terror"></option>
              <option data-v-d70eb300="" value="Indie"></option>
              <option data-v-d70eb300="" value="BritPop"></option>
              <option data-v-d70eb300="" value="Negerpunk"></option>
              <option data-v-d70eb300="" value="Polsk Punk"></option>
              <option data-v-d70eb300="" value="Beat"></option>
              <option data-v-d70eb300="" value="Christian Gangsta Rap"></option>
              <option data-v-d70eb300="" value="Heavy Metal"></option>
              <option data-v-d70eb300="" value="Black Metal"></option>
              <option data-v-d70eb300="" value="Crossover"></option>
              <option data-v-d70eb300="" value="Contemporary Christian"></option>
              <option data-v-d70eb300="" value="Christian Rock"></option>
              <option data-v-d70eb300="" value="Merengue"></option>
              <option data-v-d70eb300="" value="Salsa"></option>
              <option data-v-d70eb300="" value="Thrash Metal"></option>
              <option data-v-d70eb300="" value="Anime"></option>
              <option data-v-d70eb300="" value="JPop"></option>
              <option data-v-d70eb300="" value="SynthPop"></option>
              <option data-v-d70eb300="" value="Abstract"></option>
              <option data-v-d70eb300="" value="Art Rock"></option>
              <option data-v-d70eb300="" value="Baroque"></option>
              <option data-v-d70eb300="" value="Bhangra"></option>
              <option data-v-d70eb300="" value="Big beat"></option>
              <option data-v-d70eb300="" value="Breakbeat"></option>
              <option data-v-d70eb300="" value="Chillout"></option>
              <option data-v-d70eb300="" value="Downtempo"></option>
              <option data-v-d70eb300="" value="Dub"></option>
              <option data-v-d70eb300="" value="EBM"></option>
              <option data-v-d70eb300="" value="Eclectic"></option>
              <option data-v-d70eb300="" value="Electro"></option>
              <option data-v-d70eb300="" value="Electroclash"></option>
              <option data-v-d70eb300="" value="Emo"></option>
              <option data-v-d70eb300="" value="Experimental"></option>
              <option data-v-d70eb300="" value="Garage"></option>
              <option data-v-d70eb300="" value="Global"></option>
              <option data-v-d70eb300="" value="IDM"></option>
              <option data-v-d70eb300="" value="Illbient"></option>
              <option data-v-d70eb300="" value="Industro-Goth"></option>
              <option data-v-d70eb300="" value="Jam Band"></option>
              <option data-v-d70eb300="" value="Krautrock"></option>
              <option data-v-d70eb300="" value="Leftfield"></option>
              <option data-v-d70eb300="" value="Lounge"></option>
              <option data-v-d70eb300="" value="Math Rock"></option>
              <option data-v-d70eb300="" value="New Romantic"></option>
              <option data-v-d70eb300="" value="Nu-Breakz"></option>
              <option data-v-d70eb300="" value="Post-Punk"></option>
              <option data-v-d70eb300="" value="Post-Rock"></option>
              <option data-v-d70eb300="" value="Psytrance"></option>
              <option data-v-d70eb300="" value="Shoegaze"></option>
              <option data-v-d70eb300="" value="Space Rock"></option>
              <option data-v-d70eb300="" value="Trop Rock"></option>
              <option data-v-d70eb300="" value="World Music"></option>
              <option data-v-d70eb300="" value="Neoclassical"></option>
              <option data-v-d70eb300="" value="Audiobook"></option>
              <option data-v-d70eb300="" value="Audio Theatre"></option>
              <option data-v-d70eb300="" value="Neue Deutsche Welle"></option>
              <option data-v-d70eb300="" value="Podcast"></option>
              <option data-v-d70eb300="" value="Indie-Rock"></option>
              <option data-v-d70eb300="" value="G-Funk"></option>
              <option data-v-d70eb300="" value="Dubstep"></option>
              <option data-v-d70eb300="" value="Garage Rock"></option>
              <option data-v-d70eb300="" value="Psybient"></option>
            </datalist></label><label data-v-d70eb300=""> Year <input data-v-d70eb300="" placeholder="" data-testid="year-input" name="year" type="number"></label></div>
      </div>
      <div data-v-d70eb300="" id="editSongPanelLyrics" aria-labelledby="editSongTabLyrics" role="tabpanel" tabindex="0" style="display: none;">
        <div data-v-d70eb300="" class="form-row"><textarea data-v-d70eb300="" data-testid="lyrics-input" name="lyrics" title="Lyrics"></textarea></div>
      </div>
    </div>
  </main>
  <footer data-v-d70eb300=""><button data-v-e368fe26="" data-v-d70eb300="" class="inset-when-pressed" type="submit">Update</button><button data-v-e368fe26="" data-v-d70eb300="" class="inset-when-pressed btn-cancel" white="">Cancel</button></footer>
</form>
`;

exports[`edits multiple songs 1`] = `
<form data-v-d70eb300="">
  <header data-v-d70eb300=""><span data-v-d70eb300="" class="cover" style="background-image: url(undefined/resources/assets/img/covers/default.svg);"></span>
    <div data-v-d70eb300="" class="meta">
      <h1 data-v-d70eb300="" class="mixed">3 songs selected</h1>
      <h2 data-v-d70eb300="" data-testid="displayed-artist-name" class="mixed">Mixed Artists</h2>
      <h2 data-v-d70eb300="" data-testid="displayed-album-name" class="mixed">Mixed Albums</h2>
    </div>
  </header>
  <main data-v-d70eb300="" class="tabs">
    <div data-v-d70eb300="" class="clear" role="tablist"><button data-v-d70eb300="" id="editSongTabDetails" aria-selected="true" aria-controls="editSongPanelDetails" role="tab" type="button"> Details </button>
      <!--v-if-->
    </div>
    <div data-v-d70eb300="" class="panes">
      <div data-v-d70eb300="" id="editSongPanelDetails" aria-labelledby="editSongTabDetails" role="tabpanel" tabindex="0">
        <!--v-if-->
        <div data-v-d70eb300="" class="form-row cols"><label data-v-d70eb300=""> Artist <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="artist-input" name="artist" type="text"></label><label data-v-d70eb300=""> Album Artist <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="albumArtist-input" name="album_artist" type="text"></label></div>
        <div data-v-d70eb300="" class="form-row"><label data-v-d70eb300=""> Album <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="album-input" name="album" type="text"></label></div>
        <div data-v-d70eb300="" class="form-row cols"><label data-v-d70eb300=""> Track <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="track-input" min="1" name="track" type="number"></label><label data-v-d70eb300=""> Disc <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="disc-input" min="1" name="disc" type="number"></label></div>
        <div data-v-d70eb300="" class="form-row cols"><label data-v-d70eb300=""> Genre <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="genre-input" name="genre" type="text" list="genres"><datalist data-v-d70eb300="" id="genres">
              <option data-v-d70eb300="" value="Blues"></option>
              <option data-v-d70eb300="" value="Classic Rock"></option>
              <option data-v-d70eb300="" value="Country"></option>
              <option data-v-d70eb300="" value="Dance"></option>
              <option data-v-d70eb300="" value="Disco"></option>
              <option data-v-d70eb300="" value="Funk"></option>
              <option data-v-d70eb300="" value="Grunge"></option>
              <option data-v-d70eb300="" value="Hip-Hop"></option>
              <option data-v-d70eb300="" value="Jazz"></option>
              <option data-v-d70eb300="" value="Metal"></option>
              <option data-v-d70eb300="" value="New Age"></option>
              <option data-v-d70eb300="" value="Oldies"></option>
              <option data-v-d70eb300="" value="Other"></option>
              <option data-v-d70eb300="" value="Pop"></option>
              <option data-v-d70eb300="" value="R&amp;B"></option>
              <option data-v-d70eb300="" value="Rap"></option>
              <option data-v-d70eb300="" value="Reggae"></option>
              <option data-v-d70eb300="" value="Rock"></option>
              <option data-v-d70eb300="" value="Techno"></option>
              <option data-v-d70eb300="" value="Industrial"></option>
              <option data-v-d70eb300="" value="Alternative"></option>
              <option data-v-d70eb300="" value="Ska"></option>
              <option data-v-d70eb300="" value="Death Metal"></option>
              <option data-v-d70eb300="" value="Pranks"></option>
              <option data-v-d70eb300="" value="Soundtrack"></option>
              <option data-v-d70eb300="" value="Euro-Techno"></option>
              <option data-v-d70eb300="" value="Ambient"></option>
              <option data-v-d70eb300="" value="Trip-Hop"></option>
              <option data-v-d70eb300="" value="Vocal"></option>
              <option data-v-d70eb300="" value="Jazz &amp; Funk"></option>
              <option data-v-d70eb300="" value="Fusion"></option>
              <option data-v-d70eb300="" value="Trance"></option>
              <option data-v-d70eb300="" value="Classical"></option>
              <option data-v-d70eb300="" value="Instrumental"></option>
              <option data-v-d70eb300="" value="Acid"></option>
              <option data-v-d70eb300="" value="House"></option>
              <option data-v-d70eb300="" value="Game"></option>
              <option data-v-d70eb300="" value="Sound Clip"></option>
              <option data-v-d70eb300="" value="Gospel"></option>
              <option data-v-d70eb300="" value="Noise"></option>
              <option data-v-d70eb300="" value="Alternative Rock"></option>
              <option data-v-d70eb300="" value="Bass"></option>
              <option data-v-d70eb300="" value="Punk"></option>
              <option data-v-d70eb300="" value="Space"></option>
              <option data-v-d70eb300="" value="Meditative"></option>
              <option data-v-d70eb300="" value="Instrumental Pop"></option>
              <option data-v-d70eb300="" value="Instrumental Rock"></option>
              <option data-v-d70eb300="" value="Ethnic"></option>
              <option data-v-d70eb300="" value="Gothic"></option>
              <option data-v-d70eb300="" value="Darkwave"></option>
              <option data-v-d70eb300="" value="Techno-Industrial"></option>
              <option data-v-d70eb300="" value="Electronic"></option>
              <option data-v-d70eb300="" value="Pop-Folk"></option>
              <option data-v-d70eb300="" value="Eurodance"></option>
              <option data-v-d70eb300="" value="Dream"></option>
              <option data-v-d70eb300="" value="Southern Rock"></option>
              <option data-v-d70eb300="" value="Comedy"></option>
              <option data-v-d70eb300="" value="Cult"></option>
              <option data-v-d70eb300="" value="Gangsta"></option>
              <option data-v-d70eb300="" value="Top 40"></option>
              <option data-v-d70eb300="" value="Christian Rap"></option>
              <option data-v-d70eb300="" value="Pop/Funk"></option>
              <option data-v-d70eb300="" value="Jungle"></option>
              <option data-v-d70eb300="" value="Native US"></option>
              <option data-v-d70eb300="" value="Cabaret"></option>
              <option data-v-d70eb300="" value="New Wave"></option>
              <option data-v-d70eb300="" value="Psychedelic"></option>
              <option data-v-d70eb300="" value="Rave"></option>
              <option data-v-d70eb300="" value="Showtunes"></option>
              <option data-v-d70eb300="" value="Trailer"></option>
              <option data-v-d70eb300="" value="Lo-Fi"></option>
              <option data-v-d70eb300="" value="Tribal"></option>
              <option data-v-d70eb300="" value="Acid Punk"></option>
              <option data-v-d70eb300="" value="Acid Jazz"></option>
              <option data-v-d70eb300="" value="Polka"></option>
              <option data-v-d70eb300="" value="Retro"></option>
              <option data-v-d70eb300="" value="Musical"></option>
              <option data-v-d70eb300="" value="Rock &amp; Roll"></option>
              <option data-v-d70eb300="" value="Hard Rock"></option>
              <option data-v-d70eb300="" value="Folk"></option>
              <option data-v-d70eb300="" value="Folk-Rock"></option>
              <option data-v-d70eb300="" value="National Folk"></option>
              <option data-v-d70eb300="" value="Swing"></option>
              <option data-v-d70eb300="" value="Fast Fusion"></option>
              <option data-v-d70eb300="" value="Bebob"></option>
              <option data-v-d70eb300="" value="Latin"></option>
              <option data-v-d70eb300="" value="Revival"></option>
              <option data-v-d70eb300="" value="Celtic"></option>
              <option data-v-d70eb300="" value="Bluegrass"></option>
              <option data-v-d70eb300="" value="Avantgarde"></option>
              <option data-v-d70eb300="" value="Gothic Rock"></option>
              <option data-v-d70eb300="" value="Progressive Rock"></option>
              <option data-v-d70eb300="" value="Psychedelic Rock"></option>
              <option data-v-d70eb300="" value="Symphonic Rock"></option>
              <option data-v-d70eb300="" value="Slow Rock"></option>
              <option data-v-d70eb300="" value="Big Band"></option>
              <option data-v-d70eb300="" value="Chorus"></option>
              <option data-v-d70eb300="" value="Easy Listening"></option>
              <option data-v-d70eb300="" value="Acoustic"></option>
              <option data-v-d70eb300="" value="Humour"></option>
              <option data-v-d70eb300="" value="Speech"></option>
              <option data-v-d70eb300="" value="Chanson"></option>
              <option data-v-d70eb300="" value="Opera"></option>
              <option data-v-d70eb300="" value="Chamber Music"></option>
              <option data-v-d70eb300="" value="Sonata"></option>
              <option data-v-d70eb300="" value="Symphony"></option>
              <option data-v-d70eb300="" value="Booty Bass"></option>
              <option data-v-d70eb300="" value="Primus"></option>
              <option data-v-d70eb300="" value="Porn Groove"></option>
              <option data-v-d70eb300="" value="Satire"></option>
              <option data-v-d70eb300="" value="Slow Jam"></option>
              <option data-v-d70eb300="" value="Club"></option>
              <option data-v-d70eb300="" value="Tango"></option>
              <option data-v-d70eb300="" value="Samba"></option>
              <option data-v-d70eb300="" value="Folklore"></option>
              <option data-v-d70eb300="" value="Ballad"></option>
              <option data-v-d70eb300="" value="Power Ballad"></option>
              <option data-v-d70eb300="" value="Rhythmic Soul"></option>
              <option data-v-d70eb300="" value="Freestyle"></option>
              <option data-v-d70eb300="" value="Duet"></option>
              <option data-v-d70eb300="" value="Punk Rock"></option>
              <option data-v-d70eb300="" value="Drum Solo"></option>
              <option data-v-d70eb300="" value="A cappella"></option>
              <option data-v-d70eb300="" value="Euro-House"></option>
              <option data-v-d70eb300="" value="Dance Hall"></option>
              <option data-v-d70eb300="" value="Goa"></option>
              <option data-v-d70eb300="" value="Drum &amp; Bass"></option>
              <option data-v-d70eb300="" value="Club-House"></option>
              <option data-v-d70eb300="" value="Hardcore Techno"></option>
              <option data-v-d70eb300="" value="Terror"></option>
              <option data-v-d70eb300="" value="Indie"></option>
              <option data-v-d70eb300="" value="BritPop"></option>
              <option data-v-d70eb300="" value="Negerpunk"></option>
              <option data-v-d70eb300="" value="Polsk Punk"></option>
              <option data-v-d70eb300="" value="Beat"></option>
              <option data-v-d70eb300="" value="Christian Gangsta Rap"></option>
              <option data-v-d70eb300="" value="Heavy Metal"></option>
              <option data-v-d70eb300="" value="Black Metal"></option>
              <option data-v-d70eb300="" value="Crossover"></option>
              <option data-v-d70eb300="" value="Contemporary Christian"></option>
              <option data-v-d70eb300="" value="Christian Rock"></option>
              <option data-v-d70eb300="" value="Merengue"></option>
              <option data-v-d70eb300="" value="Salsa"></option>
              <option data-v-d70eb300="" value="Thrash Metal"></option>
              <option data-v-d70eb300="" value="Anime"></option>
              <option data-v-d70eb300="" value="JPop"></option>
              <option data-v-d70eb300="" value="SynthPop"></option>
              <option data-v-d70eb300="" value="Abstract"></option>
              <option data-v-d70eb300="" value="Art Rock"></option>
              <option data-v-d70eb300="" value="Baroque"></option>
              <option data-v-d70eb300="" value="Bhangra"></option>
              <option data-v-d70eb300="" value="Big beat"></option>
              <option data-v-d70eb300="" value="Breakbeat"></option>
              <option data-v-d70eb300="" value="Chillout"></option>
              <option data-v-d70eb300="" value="Downtempo"></option>
              <option data-v-d70eb300="" value="Dub"></option>
              <option data-v-d70eb300="" value="EBM"></option>
              <option data-v-d70eb300="" value="Eclectic"></option>
              <option data-v-d70eb300="" value="Electro"></option>
              <option data-v-d70eb300="" value="Electroclash"></option>
              <option data-v-d70eb300="" value="Emo"></option>
              <option data-v-d70eb300="" value="Experimental"></option>
              <option data-v-d70eb300="" value="Garage"></option>
              <option data-v-d70eb300="" value="Global"></option>
              <option data-v-d70eb300="" value="IDM"></option>
              <option data-v-d70eb300="" value="Illbient"></option>
              <option data-v-d70eb300="" value="Industro-Goth"></option>
              <option data-v-d70eb300="" value="Jam Band"></option>
              <option data-v-d70eb300="" value="Krautrock"></option>
              <option data-v-d70eb300="" value="Leftfield"></option>
              <option data-v-d70eb300="" value="Lounge"></option>
              <option data-v-d70eb300="" value="Math Rock"></option>
              <option data-v-d70eb300="" value="New Romantic"></option>
              <option data-v-d70eb300="" value="Nu-Breakz"></option>
              <option data-v-d70eb300="" value="Post-Punk"></option>
              <option data-v-d70eb300="" value="Post-Rock"></option>
              <option data-v-d70eb300="" value="Psytrance"></option>
              <option data-v-d70eb300="" value="Shoegaze"></option>
              <option data-v-d70eb300="" value="Space Rock"></option>
              <option data-v-d70eb300="" value="Trop Rock"></option>
              <option data-v-d70eb300="" value="World Music"></option>
              <option data-v-d70eb300="" value="Neoclassical"></option>
              <option data-v-d70eb300="" value="Audiobook"></option>
              <option data-v-d70eb300="" value="Audio Theatre"></option>
              <option data-v-d70eb300="" value="Neue Deutsche Welle"></option>
              <option data-v-d70eb300="" value="Podcast"></option>
              <option data-v-d70eb300="" value="Indie-Rock"></option>
              <option data-v-d70eb300="" value="G-Funk"></option>
              <option data-v-d70eb300="" value="Dubstep"></option>
              <option data-v-d70eb300="" value="Garage Rock"></option>
              <option data-v-d70eb300="" value="Psybient"></option>
            </datalist></label><label data-v-d70eb300=""> Year <input data-v-d70eb300="" placeholder="Leave unchanged" data-testid="year-input" name="year" type="number"></label></div>
      </div>
      <!--v-if-->
    </div>
  </main>
  <footer data-v-d70eb300=""><button data-v-e368fe26="" data-v-d70eb300="" class="inset-when-pressed" type="submit">Update</button><button data-v-e368fe26="" data-v-d70eb300="" class="inset-when-pressed btn-cancel" white="">Cancel</button></footer>
</form>
`;
